--- a/index.html
+++ b/index.html
@@ -56,8 +56,25 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4"></div>
-            <div class="col-8"></div>
+            <div class="col-4">
+                <div class="row">
+                    <div class="col-6 user-image">
+                        <img src="assets/images/man1.jpg" alt="An image of an engineer" class="mt-2">
+                    </div>
+                    <div class="col-6 user-image">
+                        <img src="assets/images/man2.jpg" alt="An image of an engineer" class="mt-2">
+                    </div>
+                </div>
+            </div>
+            <div class="col-8">
+                <h3 class="display-right pr-3 mt-2">Who We Are</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices fermentum gravida.
+                    Maecenas faucibus in lorem sit amet ultricies. Curabitur id diam metus. Ut posuere odio nunc,
+                    in pharetra magna pharetra non. Praesent non bibendum tortor, vitae vulputate justo.
+                    Nunc vel turpis ac tortor malesuada vulputate a sed nibh. Praesent metus elit, fringilla
+                    rhoncus aliquam ut, pulvinar et tortor. Pellentesque condimentum quam at nisi tempus laoreet.
+                </p>
+            </div>
         </div>
     </div>
 <!--Bootstrap Javascript Link-->
