What we do template section has been added to the site

--- a/index.html
+++ b/index.html
@@ -56,14 +56,15 @@
     </div>
     <div class="container-fluid">
         <div class="row">
+            <div class="col-12 strip mt-2 mb-2"></div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
             <div class="col-4">
                 <div class="row">
-                    <div class="col-6 user-image">
-                        <img src="assets/images/man1.jpg" alt="An image of an engineer" class="mt-2">
-                    </div>
-                    <div class="col-6 user-image">
-                        <img src="assets/images/man2.jpg" alt="An image of an engineer" class="mt-2">
-                    </div>
+                    <div class="col-6 user-image-one"></div>
+                    <div class="col-6 user-image-two"></div>
                 </div>
             </div>
             <div class="col-8">
@@ -75,6 +76,25 @@
                     rhoncus aliquam ut, pulvinar et tortor. Pellentesque condimentum quam at nisi tempus laoreet.
                 </p>
             </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 strip mt-2 mb-2"></div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-8">
+                <h3 class="pr-3 mt-2">What We Do</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices fermentum gravida.
+                    Maecenas faucibus in lorem sit amet ultricies. Curabitur id diam metus. Ut posuere odio nunc,
+                    in pharetra magna pharetra non. Praesent non bibendum tortor, vitae vulputate justo.
+                    Nunc vel turpis ac tortor malesuada vulputate a sed nibh. Praesent metus elit, fringilla
+                    rhoncus aliquam ut, pulvinar et tortor. Pellentesque condimentum quam at nisi tempus laoreet.
+                </p>
+            </div>
+            <div class="col-4 boiler-image"></div>
         </div>
     </div>
 <!--Bootstrap Javascript Link-->
