--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">HP2G Ltd</a>
+        <a class="navbar-brand" href="#"><h2>HP2G Ltd</h2></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,7 +46,6 @@
         <div class="row">
             <div class="col-12 header-nav pt-3 pb-3">
                 <button>GET A QUOTE</button>
-                <p id="header-quote">Small description to go in here</p>
             </div>
         </div>
     </div>
@@ -95,6 +94,108 @@
                 </p>
             </div>
             <div class="col-4 boiler-image"></div>
+            <div class="col-12 display-right pr-5 mt-2">
+                <img src="assets/images/gas-logo-two.png" width="5%" class="ml-4 mr-4">
+                <img src="assets/images/gas-logo-one.jpg" width="5%" class="ml-4 mr-4">
+                <img src="assets/images/gas-logo-three.jpg" width="5%" class="ml-4 mr-4">
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 strip mt-2 mb-2"></div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 center-text">
+                <h3>Our Services</h3>
+            </div>
+            <div class="col-4 service-one"></div>
+            <div class="col-4 service-two"></div>
+            <div class="col-4 service-three"></div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 strip mt-2 mb-2"></div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 center-text mb-4">
+                <h3>Testimonials</h3>
+            </div>
+            <div class="col-2 school-logo pl-5">
+                <img src="assets/images/review-logo.jpg" alt="Image of school logo">
+            </div>
+            <div class="col-4">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
+                    ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
+                    ex dolor interdum lorem.
+                </p>
+                <p>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </p>
+            </div>
+            <div class="col-4 display-right">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
+                    ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
+                    ex dolor interdum lorem.
+                </p>
+                <p>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </p>
+            </div>
+            <div class="col-2 school-logo display-right pr-5">
+                <img src="assets/images/review.jpeg" alt="Image of school logo">
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row footer-background">          
+            <div class="col-xs-4 col-sm-4 col-md-3">
+              <p class="mt-3 text-light delivery-text">Contact Us:</p>
+              <p class="footer-text">HP2G<br/>2A Finsbury Road<br/>Banbury<br/>BH23 6AH</p>
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-3">
+                <p class="mt-3 text-light">Information</p>
+                <ul class="mt-3 footer-list">
+                    <li><a class="footer-text" href="#">Service One</a></li>
+                    <li><a class="footer-text" href="#">Service Two</a></li>
+                    <li><a class="footer-text" href="#">Service Three</a></li>
+                </ul>
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-3">
+                <p class="mt-3 text-light">Quick Links</p>
+                <ul class="mt-3 footer-list">
+                    <li><a class="footer-text" href="#">Home</a></li>
+                    <li><a class="footer-text" href="#">About Us</a></li>
+                    <li><a class="footer-text" href="#">Our Services</a></li>
+                    <li><a class="footer-text" href="#">Testimonials</a></li>
+                </ul>
+            </div>
+            <div class="col-xs-4 col-sm-12 col-md-3">
+                <p class="mt-3 text-light">Follow Us</p>
+                <ul class="mt-3 footer-list icons">
+                    <li><a href="#" target="_blank" rel="noopener"
+                      aria-label="Click here to go to our facebook page"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener"
+                      aria-label="Click here to go to our twitter page"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener"
+                      aria-label="Click here to go to our instagram page"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#" target="_blank" rel="noopener"
+                      aria-label="Click here to go to our youtube page"><i class="fab fa-youtube"></i></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 <!--Bootstrap Javascript Link-->
