Logo added and contact information

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <!---Font Awesome Link-->
     <script src="https://kit.fontawesome.com/9488bd3455.js" crossorigin="anonymous"></script>
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css2?family=Mali:wght@300&family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <title>HP2G</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><h2>HP2G Ltd</h2></a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light font">
+        <img src="assets/images/logo2.png" alt="logo for the company" width="50">
+        <a class="navbar-brand ml-3 mt-3" href="#">
+            <h2>HP2G Ltd</h2>
+            <p>Commercial Plumbing, Heating and Gas Engineers</p>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,16 +39,19 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Testimonials</a>
             </li>
-            <li class="nav-item pl-5">
-                <a class="nav-link" href="#">Contact Us</a>
-            </li>
           </ul>
         </div>
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 header-nav pt-3 pb-3">
+            <div class="col-6 header-nav pt-3 pb-3 pl-4 font">
                 <button>GET A QUOTE</button>
+            </div>
+            <div class="col-6 header-nav pt-3 font header-right">
+                <p class="text-light">
+                    <i class="fa-solid fa-envelope"></i> joebatten@hp2g.com
+                    <i class="fa-solid fa-phone pl-3"></i> +447563 672632
+                </p>
             </div>
         </div>
     </div>
@@ -67,8 +73,8 @@
                 </div>
             </div>
             <div class="col-8">
-                <h3 class="display-right pr-3 mt-2">Who We Are</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices fermentum gravida.
+                <h3 class="display-right pr-3 mt-2 font">Who We Are</h3>
+                <p class="font display-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices fermentum gravida.
                     Maecenas faucibus in lorem sit amet ultricies. Curabitur id diam metus. Ut posuere odio nunc,
                     in pharetra magna pharetra non. Praesent non bibendum tortor, vitae vulputate justo.
                     Nunc vel turpis ac tortor malesuada vulputate a sed nibh. Praesent metus elit, fringilla
@@ -85,8 +91,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-8">
-                <h3 class="pr-3 mt-2">What We Do</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices fermentum gravida.
+                <h3 class="pr-3 mt-2 font">What We Do</h3>
+                <p class="font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices fermentum gravida.
                     Maecenas faucibus in lorem sit amet ultricies. Curabitur id diam metus. Ut posuere odio nunc,
                     in pharetra magna pharetra non. Praesent non bibendum tortor, vitae vulputate justo.
                     Nunc vel turpis ac tortor malesuada vulputate a sed nibh. Praesent metus elit, fringilla
@@ -109,7 +115,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 center-text">
-                <h3>Our Services</h3>
+                <h3 class="font">Our Services</h3>
             </div>
             <div class="col-4 service-one"></div>
             <div class="col-4 service-two"></div>
@@ -124,13 +130,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 center-text mb-4">
-                <h3>Testimonials</h3>
+                <h3 class="font">Testimonials</h3>
             </div>
             <div class="col-2 school-logo pl-5">
                 <img src="assets/images/review-logo.jpg" alt="Image of school logo">
             </div>
             <div class="col-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
+                <p class="font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
                     ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
                     ex dolor interdum lorem.
                 </p>
@@ -143,7 +149,7 @@
                 </p>
             </div>
             <div class="col-4 display-right">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
+                <p class="font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
                     ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
                     ex dolor interdum lorem.
                 </p>
@@ -163,11 +169,11 @@
     <div class="container-fluid">
         <div class="row footer-background">          
             <div class="col-xs-4 col-sm-4 col-md-3">
-              <p class="mt-3 text-light delivery-text">Contact Us:</p>
-              <p class="footer-text">HP2G<br/>2A Finsbury Road<br/>Banbury<br/>BH23 6AH</p>
+              <p class="mt-3 text-light delivery-text font">Contact Us:</p>
+              <p class="footer-text font">HP2G<br/>2A Finsbury Road<br/>Banbury<br/>BH23 6AH</p>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-3">
-                <p class="mt-3 text-light">Information</p>
+                <p class="mt-3 text-light font">Information</p>
                 <ul class="mt-3 footer-list">
                     <li><a class="footer-text" href="#">Service One</a></li>
                     <li><a class="footer-text" href="#">Service Two</a></li>
@@ -175,7 +181,7 @@
                 </ul>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-3">
-                <p class="mt-3 text-light">Quick Links</p>
+                <p class="mt-3 text-light font">Quick Links</p>
                 <ul class="mt-3 footer-list">
                     <li><a class="footer-text" href="#">Home</a></li>
                     <li><a class="footer-text" href="#">About Us</a></li>
@@ -184,7 +190,7 @@
                 </ul>
             </div>
             <div class="col-xs-4 col-sm-12 col-md-3">
-                <p class="mt-3 text-light">Follow Us</p>
+                <p class="mt-3 text-light font">Follow Us</p>
                 <ul class="mt-3 footer-list icons">
                     <li><a href="#" target="_blank" rel="noopener"
                       aria-label="Click here to go to our facebook page"><i class="fab fa-facebook"></i></a></li>
