Navbar responsiveness added into the site

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     <title>HP2G</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light font">
+    <nav class="navbar-menu navbar-expand-lg navbar-light bg-light font">
         <img src="assets/images/logo2.png" alt="logo for the company" width="50">
         <a class="navbar-brand ml-3 mt-3" href="#">
             <h2>HP2G Ltd</h2>
             <p>Commercial Plumbing, Heating and Gas Engineers</p>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="navbar-toggle">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
@@ -100,11 +102,6 @@
                 </p>
             </div>
             <div class="col-4 boiler-image"></div>
-            <div class="col-12 display-right pr-5 mt-2">
-                <img src="assets/images/gas-logo-two.png" width="5%" class="ml-4 mr-4">
-                <img src="assets/images/gas-logo-one.jpg" width="5%" class="ml-4 mr-4">
-                <img src="assets/images/gas-logo-three.jpg" width="5%" class="ml-4 mr-4">
-            </div>
         </div>
     </div>
     <div class="container-fluid">
@@ -148,7 +145,7 @@
                     <i class="fa-solid fa-star"></i>
                 </p>
             </div>
-            <div class="col-4 display-right">
+            <div class="col-4 display-right border-review">
                 <p class="font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
                     ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
                     ex dolor interdum lorem.
@@ -163,6 +160,13 @@
             </div>
             <div class="col-2 school-logo display-right pr-5">
                 <img src="assets/images/review.jpeg" alt="Image of school logo">
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row mt-2 mb-2">
+            <div class="col-12 font footer-quote">
+                <button>GET A QUOTE</button>
             </div>
         </div>
     </div>
@@ -201,6 +205,13 @@
                     <li><a href="#" target="_blank" rel="noopener"
                       aria-label="Click here to go to our youtube page"><i class="fab fa-youtube"></i></a></li>
                 </ul>
+                <div class="row">
+                    <div class="col-12">
+                        <img src="assets/images/gas-logo-two.png" width="50" class="pr-2">
+                        <img src="assets/images/gas-logo-one.jpg" width="50" class="pr-2">
+                        <img src="assets/images/gas-logo-three.jpg" width="50">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
