Hyperlink added to navigation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar-menu navbar-expand-lg navbar-light bg-light font" id="home">
         <img src="assets/images/logo2.png" alt="logo for the company" width="50">
-        <a class="navbar-brand ml-3 mt-3" href="#">
+        <a class="navbar-brand ml-3 mt-3" href="#home">
             <h2>HP2G Ltd</h2>
             <p>Commercial Plumbing, Heating and Gas Engineers</p>
         </a>
