--- a/index.html
+++ b/index.html
@@ -129,9 +129,30 @@
             <div class="col-12 center-text">
                 <h3 class="font">Our Services</h3>
             </div>
-            <div class="col-4 service-one"></div>
-            <div class="col-4 service-two"></div>
-            <div class="col-4 service-three"></div>
+            <div class="col-4" id="service-one">
+                <h3 class="service">Service One</h3>
+                <div id="service-one-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
+                        ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
+                        ex dolor interdum lorem. Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+            <div class="col-4" id="service-two">
+                <h3 class="service">Service Two</h3>
+                <div id="service-two-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
+                        ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
+                        ex dolor interdum lorem. Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+            <div class="col-4" id="service-three">
+                <h3 class="service">Service Three</h3>
+                <div id="service-three-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tempor,
+                        ex eget volutpat molestie, justo leo condimentum lacus, quis consectetur
+                        ex dolor interdum lorem. Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="container-fluid" id="reviews">
