Added favicon icon to the website

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!---Font Awesome Link-->
     <script src="https://kit.fontawesome.com/9488bd3455.js" crossorigin="anonymous"></script>
     <!--Google Font-->
+    <!--Favicon-->
+    <link rel="icon" type="image/png" href="assets/images/logo2.png"/>
     <title>HP2G</title>
 </head>
 <body>
